# dost

./: CMakeLists.txt  README.md  build.bat  run.bat  run.sh  social_network.csv
gui/: CMakeLists.txt
gui/src/: main.cpp  ui.cpp
gui/src/include/: globals.h  ui.h
lib/: CMakeLists.txt
lib/src/: Graph.cpp  Person.cpp  main.cpp  utils.cpp
lib/src/include/: Graph.h  Person.h
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
src/: Graph.cpp  Person.cpp  main.cpp  utils.cpp
src/include/: Person.h  utils.h
tui/: CMakeLists.txt
tui/src/: main.cpp
